# depsolve

./: main.py  pyproject.toml
depsolve/: __init__.py  depsolve.py
